fixed overflow

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -6,7 +6,6 @@ html, body {
     padding: 0;
     font-family: "RedHatText", "Montserrat", Arial, sans-serif;
     font-size: $default;
-    overflow-x: hidden;
 }
 
 html {
